# gold-rush-automation

./: .env.example  .gitignore  Cargo.toml  README.md
abi/: gold_rush.json
crates/keeper_lib/: Cargo.toml
crates/keeper_lib/src/: client.rs  lib.rs  pda.rs  types.rs  wallet.rs
crates/keeper_lib/src/client/: anchor.rs  rpc.rs
crates/keeper_lib/src/storage/: schema.rs  sqlite.rs
crates/keeper_lib/src/types/: asset_account.rs  config.rs  config_account.rs  enums.rs  group_asset_account.rs  mod.rs  round_account.rs
crates/keepers/: Cargo.toml
crates/keepers/src/: config.rs  keepers.rs  lib.rs  logging.rs
crates/keepers/src/keepers/: settle_round.rs  start_round.rs
