[package]
name = "keeper_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.32.1"
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
anyhow = "1.0.100"
dotenvy = "0.15.7"
hex = "0.4.3"
pyth-solana-receiver-sdk = "1.0.1"
rusqlite = "0.37.0"
serde_json = "1.0.145"
sha2 = "0.10.9"
solana-client = "3.0.6"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
