[package]
name = "keepers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
keeper_lib = { path = "../keeper_lib" }
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "json",
] }
hostname = "0.4.0"
